--- a/Circus Charlie/Circus Charlie.vcxproj.filters
+++ b/Circus Charlie/Circus Charlie.vcxproj.filters
@@ -42,6 +42,9 @@
     <ClCompile Include="Log.cpp">
       <Filter>Source Files\Utils</Filter>
     </ClCompile>
+    <ClCompile Include="ModuleLevels.cpp">
+      <Filter>Source Files\Modules</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Globals.h">
@@ -66,6 +69,9 @@
       <Filter>Source Files\Main</Filter>
     </ClInclude>
     <ClInclude Include="Module.h">
+      <Filter>Source Files\Modules</Filter>
+    </ClInclude>
+    <ClInclude Include="ModuleLevels.h">
       <Filter>Source Files\Modules</Filter>
     </ClInclude>
   </ItemGroup>
