Added Input module, and background now moves
Also put all background pngs into one

--- a/Circus Charlie/Circus Charlie.vcxproj.filters
+++ b/Circus Charlie/Circus Charlie.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="ModuleLevels.cpp">
       <Filter>Source Files\Modules</Filter>
     </ClCompile>
+    <ClCompile Include="ModuleInput.cpp">
+      <Filter>Source Files\Modules</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Globals.h">
@@ -72,6 +75,9 @@
       <Filter>Source Files\Modules</Filter>
     </ClInclude>
     <ClInclude Include="ModuleLevels.h">
+      <Filter>Source Files\Modules</Filter>
+    </ClInclude>
+    <ClInclude Include="ModuleInput.h">
       <Filter>Source Files\Modules</Filter>
     </ClInclude>
   </ItemGroup>
