--- a/Circus Charlie/Circus Charlie.vcxproj.filters
+++ b/Circus Charlie/Circus Charlie.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="ModuleInput.cpp">
       <Filter>Source Files\Modules</Filter>
     </ClCompile>
+    <ClCompile Include="Graphics.cpp">
+      <Filter>Source Files\Modules</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Globals.h">
@@ -78,6 +81,9 @@
       <Filter>Source Files\Modules</Filter>
     </ClInclude>
     <ClInclude Include="ModuleInput.h">
+      <Filter>Source Files\Modules</Filter>
+    </ClInclude>
+    <ClInclude Include="Graphics.h">
       <Filter>Source Files\Modules</Filter>
     </ClInclude>
   </ItemGroup>
