player collides with rings of fire
created enemy class to mantain level class cleaner

--- a/Circus Charlie/Circus Charlie.vcxproj.filters
+++ b/Circus Charlie/Circus Charlie.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClCompile Include="Collider.cpp">
       <Filter>Source Files\Utils</Filter>
     </ClCompile>
+    <ClCompile Include="ModuleEnemy.cpp">
+      <Filter>Source Files\Modules</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Globals.h">
@@ -115,6 +118,9 @@
     </ClInclude>
     <ClInclude Include="Collider.h">
       <Filter>Source Files\Utils</Filter>
+    </ClInclude>
+    <ClInclude Include="ModuleEnemy.h">
+      <Filter>Source Files\Modules</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
